@@ -1,74 +1,74 @@
 {
-  "count": 0,
-  "uniques": 0,
+  "count": 1,
+  "uniques": 1,
   "views": [
     {
-      "timestamp": "2025-12-17T00:00:00Z",
+      "timestamp": "2026-01-19T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-18T00:00:00Z",
+      "timestamp": "2026-01-20T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-19T00:00:00Z",
+      "timestamp": "2026-01-21T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-20T00:00:00Z",
+      "timestamp": "2026-01-22T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-21T00:00:00Z",
+      "timestamp": "2026-01-23T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-22T00:00:00Z",
+      "timestamp": "2026-01-24T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-23T00:00:00Z",
+      "timestamp": "2026-01-25T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-24T00:00:00Z",
+      "timestamp": "2026-01-26T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-25T00:00:00Z",
+      "timestamp": "2026-01-27T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-26T00:00:00Z",
+      "timestamp": "2026-01-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2026-01-29T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-27T00:00:00Z",
+      "timestamp": "2026-01-30T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-28T00:00:00Z",
+      "timestamp": "2026-01-31T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2025-12-29T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2025-12-30T00:00:00Z",
+      "timestamp": "2026-02-01T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
